k8s/apps/radar/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: radar-allow-interceptor
  namespace: keda
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: radar
  to:
    - group: ""
      kind: Service
      name: keda-add-ons-http-interceptor-proxy
