k8s/apps/radar/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radar
  namespace: radar
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: keda
          podSelector:
            matchLabels:
              app.kubernetes.io/component: interceptor
              app.kubernetes.io/instance: keda-http-addon
              app.kubernetes.io/name: http-add-on
              app.kubernetes.io/part-of: keda-add-ons-http
      ports:
        - port: 9280
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: radar
      app.kubernetes.io/name: radar
  policyTypes:
    - Ingress
